@@ -1823,6 +1823,18 @@ name|uniqueKeyField
 operator|=
 name|uniqueKeyField
 expr_stmt|;
+name|newSchema
+operator|.
+name|uniqueKeyFieldName
+operator|=
+name|uniqueKeyFieldName
+expr_stmt|;
+name|newSchema
+operator|.
+name|uniqueKeyFieldType
+operator|=
+name|uniqueKeyFieldType
+expr_stmt|;
 if|if
 condition|(
 name|includeFieldDataStructures
