@@ -436,6 +436,21 @@ name|File
 argument_list|(
 name|testHomeConfDir
 argument_list|,
+literal|"schema-one-field-no-dynamic-field-unique-key.xml"
+argument_list|)
+argument_list|,
+name|tmpConfDir
+argument_list|)
+expr_stmt|;
+name|FileUtils
+operator|.
+name|copyFileToDirectory
+argument_list|(
+operator|new
+name|File
+argument_list|(
+name|testHomeConfDir
+argument_list|,
 literal|"schema-minimal.xml"
 argument_list|)
 argument_list|,
@@ -2763,6 +2778,292 @@ literal|":thing"
 argument_list|)
 argument_list|,
 literal|"//*[@numFound='1']"
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|testPersistUniqueKey
+specifier|public
+name|void
+name|testPersistUniqueKey
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|assertSchemaResource
+argument_list|(
+name|collection
+argument_list|,
+literal|"managed-schema"
+argument_list|)
+expr_stmt|;
+name|deleteCore
+argument_list|()
+expr_stmt|;
+name|File
+name|managedSchemaFile
+init|=
+operator|new
+name|File
+argument_list|(
+name|tmpConfDir
+argument_list|,
+literal|"managed-schema"
+argument_list|)
+decl_stmt|;
+name|assertTrue
+argument_list|(
+name|managedSchemaFile
+operator|.
+name|delete
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// Delete managed-schema so it won't block parsing a new schema
+name|initCore
+argument_list|(
+literal|"solrconfig-mutable-managed-schema.xml"
+argument_list|,
+literal|"schema-one-field-no-dynamic-field-unique-key.xml"
+argument_list|,
+name|tmpSolrHome
+operator|.
+name|getPath
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|managedSchemaFile
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|String
+name|managedSchemaContents
+init|=
+name|FileUtils
+operator|.
+name|readFileToString
+argument_list|(
+name|managedSchemaFile
+argument_list|,
+literal|"UTF-8"
+argument_list|)
+decl_stmt|;
+name|assertFalse
+argument_list|(
+name|managedSchemaContents
+operator|.
+name|contains
+argument_list|(
+literal|"\"new_field\""
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|Object
+argument_list|>
+name|options
+init|=
+operator|new
+name|HashMap
+argument_list|<
+name|String
+argument_list|,
+name|Object
+argument_list|>
+argument_list|()
+decl_stmt|;
+name|options
+operator|.
+name|put
+argument_list|(
+literal|"stored"
+argument_list|,
+literal|"false"
+argument_list|)
+expr_stmt|;
+name|IndexSchema
+name|oldSchema
+init|=
+name|h
+operator|.
+name|getCore
+argument_list|()
+operator|.
+name|getLatestSchema
+argument_list|()
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|"str"
+argument_list|,
+name|oldSchema
+operator|.
+name|getUniqueKeyField
+argument_list|()
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|String
+name|fieldName
+init|=
+literal|"new_field"
+decl_stmt|;
+name|String
+name|fieldType
+init|=
+literal|"string"
+decl_stmt|;
+name|SchemaField
+name|newField
+init|=
+name|oldSchema
+operator|.
+name|newField
+argument_list|(
+name|fieldName
+argument_list|,
+name|fieldType
+argument_list|,
+name|options
+argument_list|)
+decl_stmt|;
+name|IndexSchema
+name|newSchema
+init|=
+name|oldSchema
+operator|.
+name|addField
+argument_list|(
+name|newField
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|"str"
+argument_list|,
+name|newSchema
+operator|.
+name|getUniqueKeyField
+argument_list|()
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|h
+operator|.
+name|getCore
+argument_list|()
+operator|.
+name|setLatestSchema
+argument_list|(
+name|newSchema
+argument_list|)
+expr_stmt|;
+name|log
+operator|.
+name|info
+argument_list|(
+literal|"####close harness"
+argument_list|)
+expr_stmt|;
+name|h
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|log
+operator|.
+name|info
+argument_list|(
+literal|"####close harness end"
+argument_list|)
+expr_stmt|;
+name|initCore
+argument_list|()
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|managedSchemaFile
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|FileInputStream
+name|stream
+init|=
+operator|new
+name|FileInputStream
+argument_list|(
+name|managedSchemaFile
+argument_list|)
+decl_stmt|;
+name|managedSchemaContents
+operator|=
+name|IOUtils
+operator|.
+name|toString
+argument_list|(
+name|stream
+argument_list|,
+literal|"UTF-8"
+argument_list|)
+expr_stmt|;
+name|stream
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+comment|// Explicitly close so that Windows can delete this file
+name|assertTrue
+argument_list|(
+name|managedSchemaContents
+operator|.
+name|contains
+argument_list|(
+literal|"<field name=\"new_field\" type=\"string\" stored=\"false\"/>"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|IndexSchema
+name|newNewSchema
+init|=
+name|h
+operator|.
+name|getCore
+argument_list|()
+operator|.
+name|getLatestSchema
+argument_list|()
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|newNewSchema
+operator|.
+name|getUniqueKeyField
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"str"
+argument_list|,
+name|newNewSchema
+operator|.
+name|getUniqueKeyField
+argument_list|()
+operator|.
+name|getName
+argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
